testdata/errors/missing_field_colon.ral
config { }

register foo: 32 { a 16, b: 16 }
